--- a/index.html
+++ b/index.html
@@ -7,3 +7,22 @@ botão comprar deve ficar colado ao fundo do card com padding interno
 
 não pode ultrapassar os 200px de largura total -->
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Coca-Cola</title>
+</head>
+<body>
+
+    <div class="card">
+        <img src="assets/cocacola.png" alt="Coca-Cola">
+        <h1>Coca-Cola</h1>
+        <p>R$ 5,89</p>
+        <button>Comprar</button>
+    </div>
+    
+</body>
+</html>
